# klipper-ssh-app

./: package.json  svelte.config.js  tailwind.config.ts
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dfu_writer.rs  lib.rs  main.rs  ssh_client.rs  state.rs
src-tauri/src/ssh_client/: klipper_setup.rs  ssh.rs  ssh_util.rs
src/lib/: DFUSetup.svelte  Greet.svelte  KlipperSetup.svelte  KlipperTool.svelte  SshClient.svelte  WebUISetup.svelte  store.ts
src/lib/klipper-tool/: Canbus.svelte
src/routes/: +layout.svelte  +page.svelte
