[package]
name = "klipper-ssh-app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "klipper_ssh_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh="0.49"
russh-sftp = "2.0.6"
clap = { version = "4.5.23", features = ["derive"] }
tokio = {version = "1.42.0", features = ["io-std", "io-util", "sync", "time"] }
anyhow = "1.0"
async-trait = "0.1"
rusb = "0.9"
regex = "1.11"
tauri-plugin-dialog = "2"

